openapi example for union typeguard
