# apim-server/server/api/services/examples.service.ts
@@ -1,6 +1,7 @@
 
 import { EServerStatusCodes, ServerLogger } from '../../common/ServerLogger';
 import ExampleList = Components.Schemas.ExampleList;
+import ExampleWebhook = Components.Schemas.ExampleWebHook;
 
 const exampleList: ExampleList = [
   "example-1",
@@ -14,6 +15,7 @@ export type TAPSExampleListResponse = {
 };
 
 export class ExamplesService {
+  private counter: number =0;
 
   public all = async(): Promise<TAPSExampleListResponse> => {
     return {
@@ -21,6 +23,37 @@ export class ExamplesService {
       list: exampleList
     }
   }
+
+  public getWebhooks = async(): Promise<Array<ExampleWebhook>> => {
+    let baseExampleWebhook: ExampleWebhook = {
+      uri: 'http://my.callback.com/my-basic-auth',
+      method: 'POST'
+    }
+
+    if(this.counter++ % 2 === 0) {
+      // Basic Auth
+     const exampleWebhook: ExampleWebhook = {
+       ...baseExampleWebhook,
+        authentication: {
+          authMethod: 'Basic',
+          username: 'username',
+          password: 'password' 
+        }
+      }
+      return [exampleWebhook];
+    } else {
+      // Header Auth
+      const exampleWebhook: ExampleWebhook = {
+        ...baseExampleWebhook,
+          authentication: {
+            authMethod: 'Header',
+            headerName: 'headerName',
+            headerValue: 'headerValue'
+         }
+       }
+       return [exampleWebhook];
+      }
+    }
 }
 
 //   byId(id: number): Promise<Example> {
@@ -40,3 +73,4 @@ export class ExamplesService {
 // }
 
 export default new ExamplesService();
+ 
